--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 #连接超时时间（毫秒）
 spring.redis.timeout=10000
+#MongoDB的配置
+spring.data.mongodb.uri=mongodb://lai:root@localhost:27017/test
